--- a/frontend/tailwind.css
+++ b/frontend/tailwind.css
@@ -1,9 +1,17 @@
+.mt-2 {
+  margin-top: 0.5rem
+}
+
 .mb-4 {
   margin-bottom: 1rem
 }
 
 .mb-3 {
   margin-bottom: 0.75rem
+}
+
+.mt-4 {
+  margin-top: 1rem
 }
 
 .flex {
@@ -66,19 +74,19 @@
   text-align: center
 }
 
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem
-}
-
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem
 }
 
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem
 }
 
 .text-white {
