--- a/frontend/tailwind.css
+++ b/frontend/tailwind.css
@@ -6,6 +6,34 @@
   margin-bottom: 0.75rem
 }
 
+.mb-8 {
+  margin-bottom: 2rem
+}
+
+.mb-28 {
+  margin-bottom: 7rem
+}
+
+.mb-32 {
+  margin-bottom: 8rem
+}
+
+.mb-48 {
+  margin-bottom: 12rem
+}
+
+.mb-40 {
+  margin-bottom: 10rem
+}
+
+.mb-36 {
+  margin-bottom: 9rem
+}
+
+.mb-6 {
+  margin-bottom: 1.5rem
+}
+
 .flex {
   display: flex
 }
@@ -48,6 +76,11 @@
   background-color: rgb(59 130 246 / var(--tw-bg-opacity))
 }
 
+.bg-\[\#FEFF65\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 255 101 / var(--tw-bg-opacity))
+}
+
 .p-2 {
   padding: 0.5rem
 }
@@ -62,13 +95,23 @@
   padding-bottom: 0.25rem
 }
 
-.text-center {
-  text-align: center
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem
 }
 
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem
+.py-\[-6\] {
+  padding-top: -6;
+  padding-bottom: -6
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem
+}
+
+.text-center {
+  text-align: center
 }
 
 .text-xl {
@@ -76,9 +119,9 @@
   line-height: 1.75rem
 }
 
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem
 }
 
 .text-white {
