--- a/frontend/tailwind.css
+++ b/frontend/tailwind.css
@@ -1,3 +1,56 @@
+.absolute {
+  position: absolute
+}
+
+.relative {
+  position: relative
+}
+
+.bottom-0 {
+  bottom: 0px
+}
+
+.top-0 {
+  top: 0px
+}
+
+.top-full {
+  top: 100%
+}
+
+.top-12 {
+  top: 3rem
+}
+
+.top-8 {
+  top: 2rem
+}
+
+.top-7 {
+  top: 1.75rem
+}
+
+.z-10 {
+  z-index: 10
+}
+
+.z-\[10_\!important\] {
+  z-index: 10 !important
+}
+
+.z-50 {
+  z-index: 50
+}
+
+.z-0 {
+  z-index: 0
+}
+
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem
+}
+
 .mt-4 {
   margin-top: 1rem
 }
@@ -18,8 +71,52 @@
   margin-bottom: 0.5rem
 }
 
+.ml-4 {
+  margin-left: 1rem
+}
+
+.mr-3 {
+  margin-right: 0.75rem
+}
+
+.mr-4 {
+  margin-right: 1rem
+}
+
+.mr-2 {
+  margin-right: 0.5rem
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem
+}
+
+.mt-12 {
+  margin-top: 3rem
+}
+
+.mt-8 {
+  margin-top: 2rem
+}
+
+.mr-1 {
+  margin-right: 0.25rem
+}
+
+.block {
+  display: block
+}
+
+.inline-block {
+  display: inline-block
+}
+
 .flex {
   display: flex
+}
+
+.hidden {
+  display: none
 }
 
 .h-full {
@@ -28,6 +125,22 @@
 
 .h-12 {
   height: 3rem
+}
+
+.h-auto {
+  height: auto
+}
+
+.h-48 {
+  height: 12rem
+}
+
+.h-32 {
+  height: 8rem
+}
+
+.h-36 {
+  height: 9rem
 }
 
 .w-full {
@@ -40,6 +153,34 @@
 
 .w-2\/3 {
   width: 66.666667%
+}
+
+.w-auto {
+  width: auto
+}
+
+.w-48 {
+  width: 12rem
+}
+
+.w-32 {
+  width: 8rem
+}
+
+.w-36 {
+  width: 9rem
+}
+
+.w-\[calc\(100\%-8px\)\] {
+  width: calc(100% - 8px)
+}
+
+.max-w-sm {
+  max-width: 24rem
+}
+
+.max-w-xl {
+  max-width: 36rem
 }
 
 .grow {
@@ -66,8 +207,47 @@
   border-radius: 0.25rem
 }
 
+.rounded-xl {
+  border-radius: 0.75rem
+}
+
+.rounded-md {
+  border-radius: 0.375rem
+}
+
+.rounded-lg {
+  border-radius: 0.5rem
+}
+
 .border-2 {
   border-width: 2px
+}
+
+.border {
+  border-width: 1px
+}
+
+.border-x {
+  border-left-width: 1px;
+  border-right-width: 1px
+}
+
+.border-y {
+  border-top-width: 1px;
+  border-bottom-width: 1px
+}
+
+.border-y-2 {
+  border-top-width: 2px;
+  border-bottom-width: 2px
+}
+
+.border-b-2 {
+  border-bottom-width: 2px
+}
+
+.border-b {
+  border-bottom-width: 1px
 }
 
 .border-gray-300 {
@@ -80,6 +260,31 @@
   border-color: rgb(203 213 225 / var(--tw-border-opacity))
 }
 
+.border-blue-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(37 99 235 / var(--tw-border-opacity))
+}
+
+.border-blue-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(96 165 250 / var(--tw-border-opacity))
+}
+
+.border-slate-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(71 85 105 / var(--tw-border-opacity))
+}
+
+.border-gray-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(75 85 99 / var(--tw-border-opacity))
+}
+
+.border-gray-100 {
+  --tw-border-opacity: 1;
+  border-color: rgb(243 244 246 / var(--tw-border-opacity))
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity))
@@ -90,8 +295,82 @@
   background-color: rgb(59 130 246 / var(--tw-bg-opacity))
 }
 
+.bg-blue-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 64 175 / var(--tw-bg-opacity))
+}
+
+.bg-\[\#FFFFFF\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity))
+}
+
+.bg-\[\#fff0db\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 240 219 / var(--tw-bg-opacity))
+}
+
+.bg-\[\#fff6e8\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 246 232 / var(--tw-bg-opacity))
+}
+
+.bg-\[\#87CEEB\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(135 206 235 / var(--tw-bg-opacity))
+}
+
+.bg-\[\#D8F2FF\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(216 242 255 / var(--tw-bg-opacity))
+}
+
+.bg-slate-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(148 163 184 / var(--tw-bg-opacity))
+}
+
+.bg-neutral-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 245 245 / var(--tw-bg-opacity))
+}
+
+.bg-blue-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity))
+}
+
+.bg-slate-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity))
+}
+
+.bg-blue-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(147 197 253 / var(--tw-bg-opacity))
+}
+
+.bg-blue-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(96 165 250 / var(--tw-bg-opacity))
+}
+
+.bg-gray-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity))
+}
+
+.bg-gray-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity))
+}
+
 .p-2 {
   padding: 0.5rem
+}
+
+.p-4 {
+  padding: 1rem
 }
 
 .px-4 {
@@ -107,6 +386,24 @@
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem
+}
+
+.pt-4 {
+  padding-top: 1rem
+}
+
+.pb-4 {
+  padding-bottom: 1rem
 }
 
 .text-center {
@@ -128,6 +425,11 @@
   line-height: 1.75rem
 }
 
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity))
@@ -136,4 +438,14 @@
 .text-red-600 {
   --tw-text-opacity: 1;
   color: rgb(220 38 38 / var(--tw-text-opacity))
+}
+
+.text-slate-800 {
+  --tw-text-opacity: 1;
+  color: rgb(30 41 59 / var(--tw-text-opacity))
+}
+
+.text-slate-500 {
+  --tw-text-opacity: 1;
+  color: rgb(100 116 139 / var(--tw-text-opacity))
 }
