--- a/frontend/tailwind.css
+++ b/frontend/tailwind.css
@@ -6,6 +6,10 @@
   position: relative
 }
 
+.top-7 {
+  top: 1.75rem
+}
+
 .bottom-0 {
   bottom: 0px
 }
@@ -14,49 +18,28 @@
   top: 0px
 }
 
-.top-full {
-  top: 100%
-}
-
-.top-12 {
-  top: 3rem
-}
-
-.top-8 {
-  top: 2rem
-}
-
-.top-7 {
-  top: 1.75rem
-}
-
 .z-10 {
   z-index: 10
 }
 
-.z-\[10_\!important\] {
-  z-index: 10 !important
-}
-
-.z-50 {
-  z-index: 50
-}
-
-.z-0 {
-  z-index: 0
-}
-
-.mx-4 {
-  margin-left: 1rem;
-  margin-right: 1rem
-}
-
-.mt-4 {
-  margin-top: 1rem
+.mt-8 {
+  margin-top: 2rem
 }
 
 .mb-4 {
   margin-bottom: 1rem
+}
+
+.mr-2 {
+  margin-right: 0.5rem
+}
+
+.mr-1 {
+  margin-right: 0.25rem
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem
 }
 
 .mb-8 {
@@ -75,48 +58,8 @@
   margin-left: 1rem
 }
 
-.mr-3 {
-  margin-right: 0.75rem
-}
-
-.mr-4 {
-  margin-right: 1rem
-}
-
-.mr-2 {
-  margin-right: 0.5rem
-}
-
-.mb-1 {
-  margin-bottom: 0.25rem
-}
-
-.mt-12 {
-  margin-top: 3rem
-}
-
-.mt-8 {
-  margin-top: 2rem
-}
-
-.mr-1 {
-  margin-right: 0.25rem
-}
-
-.block {
-  display: block
-}
-
-.inline-block {
-  display: inline-block
-}
-
 .flex {
   display: flex
-}
-
-.hidden {
-  display: none
 }
 
 .h-full {
@@ -127,20 +70,28 @@
   height: 3rem
 }
 
-.h-auto {
-  height: auto
-}
-
 .h-48 {
   height: 12rem
 }
 
-.h-32 {
-  height: 8rem
+.h-1\/2 {
+  height: 50%
 }
 
-.h-36 {
-  height: 9rem
+.h-2\/3 {
+  height: 66.666667%
+}
+
+.h-1\/3 {
+  height: 33.333333%
+}
+
+.max-h-\[48\] {
+  max-height: 48
+}
+
+.max-h-48 {
+  max-height: 12rem
 }
 
 .w-full {
@@ -151,36 +102,12 @@
   width: 91.666667%
 }
 
-.w-2\/3 {
-  width: 66.666667%
-}
-
-.w-auto {
-  width: auto
-}
-
 .w-48 {
   width: 12rem
 }
 
-.w-32 {
-  width: 8rem
-}
-
-.w-36 {
-  width: 9rem
-}
-
-.w-\[calc\(100\%-8px\)\] {
-  width: calc(100% - 8px)
-}
-
-.max-w-sm {
-  max-width: 24rem
-}
-
-.max-w-xl {
-  max-width: 36rem
+.w-2\/3 {
+  width: 66.666667%
 }
 
 .grow {
@@ -189,6 +116,10 @@
 
 .flex-row {
   flex-direction: row
+}
+
+.flex-wrap {
+  flex-wrap: wrap
 }
 
 .items-center {
@@ -203,20 +134,12 @@
   border-radius: 9999px
 }
 
-.rounded {
-  border-radius: 0.25rem
-}
-
-.rounded-xl {
-  border-radius: 0.75rem
-}
-
 .rounded-md {
   border-radius: 0.375rem
 }
 
-.rounded-lg {
-  border-radius: 0.5rem
+.rounded {
+  border-radius: 0.25rem
 }
 
 .border-2 {
@@ -227,27 +150,8 @@
   border-width: 1px
 }
 
-.border-x {
-  border-left-width: 1px;
-  border-right-width: 1px
-}
-
-.border-y {
-  border-top-width: 1px;
-  border-bottom-width: 1px
-}
-
-.border-y-2 {
-  border-top-width: 2px;
-  border-bottom-width: 2px
-}
-
 .border-b-2 {
   border-bottom-width: 2px
-}
-
-.border-b {
-  border-bottom-width: 1px
 }
 
 .border-gray-300 {
@@ -255,14 +159,14 @@
   border-color: rgb(209 213 219 / var(--tw-border-opacity))
 }
 
+.border-gray-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(75 85 99 / var(--tw-border-opacity))
+}
+
 .border-slate-300 {
   --tw-border-opacity: 1;
   border-color: rgb(203 213 225 / var(--tw-border-opacity))
-}
-
-.border-blue-600 {
-  --tw-border-opacity: 1;
-  border-color: rgb(37 99 235 / var(--tw-border-opacity))
 }
 
 .border-blue-400 {
@@ -270,59 +174,14 @@
   border-color: rgb(96 165 250 / var(--tw-border-opacity))
 }
 
-.border-slate-600 {
+.border-gray-500 {
   --tw-border-opacity: 1;
-  border-color: rgb(71 85 105 / var(--tw-border-opacity))
-}
-
-.border-gray-600 {
-  --tw-border-opacity: 1;
-  border-color: rgb(75 85 99 / var(--tw-border-opacity))
-}
-
-.border-gray-100 {
-  --tw-border-opacity: 1;
-  border-color: rgb(243 244 246 / var(--tw-border-opacity))
+  border-color: rgb(107 114 128 / var(--tw-border-opacity))
 }
 
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity))
-}
-
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity))
-}
-
-.bg-blue-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 64 175 / var(--tw-bg-opacity))
-}
-
-.bg-\[\#FFFFFF\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity))
-}
-
-.bg-\[\#fff0db\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 240 219 / var(--tw-bg-opacity))
-}
-
-.bg-\[\#fff6e8\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 246 232 / var(--tw-bg-opacity))
-}
-
-.bg-\[\#87CEEB\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(135 206 235 / var(--tw-bg-opacity))
-}
-
-.bg-\[\#D8F2FF\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(216 242 255 / var(--tw-bg-opacity))
 }
 
 .bg-slate-400 {
@@ -335,24 +194,24 @@
   background-color: rgb(245 245 245 / var(--tw-bg-opacity))
 }
 
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity))
+}
+
 .bg-blue-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(37 99 235 / var(--tw-bg-opacity))
 }
 
-.bg-slate-200 {
+.bg-blue-100 {
   --tw-bg-opacity: 1;
-  background-color: rgb(226 232 240 / var(--tw-bg-opacity))
+  background-color: rgb(219 234 254 / var(--tw-bg-opacity))
 }
 
-.bg-blue-300 {
+.bg-gray-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(147 197 253 / var(--tw-bg-opacity))
-}
-
-.bg-blue-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(96 165 250 / var(--tw-bg-opacity))
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity))
 }
 
 .bg-gray-100 {
@@ -360,17 +219,22 @@
   background-color: rgb(243 244 246 / var(--tw-bg-opacity))
 }
 
-.bg-gray-300 {
+.bg-blue-300 {
   --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity))
+  background-color: rgb(147 197 253 / var(--tw-bg-opacity))
 }
 
-.p-2 {
-  padding: 0.5rem
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity))
 }
 
 .p-4 {
   padding: 1rem
+}
+
+.p-2 {
+  padding: 0.5rem
 }
 
 .px-4 {
@@ -388,22 +252,13 @@
   padding-bottom: 0.25rem
 }
 
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem
 }
 
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem
-}
-
-.pt-4 {
-  padding-top: 1rem
-}
-
-.pb-4 {
-  padding-bottom: 1rem
+.pb-\[-2\] {
+  padding-bottom: -2
 }
 
 .text-center {
@@ -413,11 +268,6 @@
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem
-}
-
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem
 }
 
 .text-xl {
@@ -430,6 +280,26 @@
   line-height: 1.25rem
 }
 
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem
+}
+
+.text-slate-500 {
+  --tw-text-opacity: 1;
+  color: rgb(100 116 139 / var(--tw-text-opacity))
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity))
@@ -440,12 +310,10 @@
   color: rgb(220 38 38 / var(--tw-text-opacity))
 }
 
-.text-slate-800 {
-  --tw-text-opacity: 1;
-  color: rgb(30 41 59 / var(--tw-text-opacity))
+.opacity-50 {
+  opacity: 0.5
 }
 
-.text-slate-500 {
-  --tw-text-opacity: 1;
-  color: rgb(100 116 139 / var(--tw-text-opacity))
+.opacity-70 {
+  opacity: 0.7
 }
