--- a/frontend/tailwind.css
+++ b/frontend/tailwind.css
@@ -2,20 +2,12 @@
   position: absolute
 }
 
-.relative {
-  position: relative
-}
-
-.top-7 {
-  top: 1.75rem
+.top-0 {
+  top: 0px
 }
 
 .bottom-0 {
   bottom: 0px
-}
-
-.top-0 {
-  top: 0px
 }
 
 .z-10 {
@@ -34,6 +26,10 @@
   margin-right: 0.5rem
 }
 
+.mb-2 {
+  margin-bottom: 0.5rem
+}
+
 .mr-1 {
   margin-right: 0.25rem
 }
@@ -50,10 +46,6 @@
   margin-bottom: 0.75rem
 }
 
-.mb-2 {
-  margin-bottom: 0.5rem
-}
-
 .ml-4 {
   margin-left: 1rem
 }
@@ -66,48 +58,36 @@
   height: 100%
 }
 
-.h-12 {
-  height: 3rem
-}
-
-.h-48 {
-  height: 12rem
-}
-
-.h-1\/2 {
-  height: 50%
-}
-
-.h-2\/3 {
-  height: 66.666667%
+.h-36 {
+  height: 9rem
 }
 
 .h-1\/3 {
   height: 33.333333%
 }
 
-.max-h-\[48\] {
-  max-height: 48
+.h-2\/3 {
+  height: 66.666667%
 }
 
-.max-h-48 {
-  max-height: 12rem
+.h-12 {
+  height: 3rem
 }
 
 .w-full {
   width: 100%
 }
 
-.w-11\/12 {
-  width: 91.666667%
-}
-
-.w-48 {
-  width: 12rem
-}
-
 .w-2\/3 {
   width: 66.666667%
+}
+
+.w-36 {
+  width: 9rem
+}
+
+.w-11\/12 {
+  width: 91.666667%
 }
 
 .grow {
@@ -164,14 +144,9 @@
   border-color: rgb(75 85 99 / var(--tw-border-opacity))
 }
 
-.border-slate-300 {
+.border-slate-400 {
   --tw-border-opacity: 1;
-  border-color: rgb(203 213 225 / var(--tw-border-opacity))
-}
-
-.border-blue-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(96 165 250 / var(--tw-border-opacity))
+  border-color: rgb(148 163 184 / var(--tw-border-opacity))
 }
 
 .border-gray-500 {
@@ -179,9 +154,9 @@
   border-color: rgb(107 114 128 / var(--tw-border-opacity))
 }
 
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity))
+.border-blue-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(96 165 250 / var(--tw-border-opacity))
 }
 
 .bg-slate-400 {
@@ -194,39 +169,29 @@
   background-color: rgb(245 245 245 / var(--tw-bg-opacity))
 }
 
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity))
-}
-
-.bg-blue-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity))
-}
-
-.bg-blue-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(219 234 254 / var(--tw-bg-opacity))
-}
-
-.bg-gray-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity))
-}
-
 .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity))
 }
 
-.bg-blue-300 {
+.bg-slate-300 {
   --tw-bg-opacity: 1;
-  background-color: rgb(147 197 253 / var(--tw-bg-opacity))
+  background-color: rgb(203 213 225 / var(--tw-bg-opacity))
+}
+
+.bg-orange-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(194 65 12 / var(--tw-bg-opacity))
 }
 
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity))
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity))
 }
 
 .p-4 {
@@ -235,11 +200,6 @@
 
 .p-2 {
   padding: 0.5rem
-}
-
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem
 }
 
 .px-2 {
@@ -252,13 +212,9 @@
   padding-bottom: 0.25rem
 }
 
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem
-}
-
-.pb-\[-2\] {
-  padding-bottom: -2
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem
 }
 
 .text-center {
@@ -275,6 +231,11 @@
   line-height: 1.75rem
 }
 
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem
+}
+
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem
@@ -285,14 +246,14 @@
   line-height: 2.5rem
 }
 
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem
 }
 
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem
+.text-gray-800 {
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity))
 }
 
 .text-slate-500 {
@@ -308,10 +269,6 @@
 .text-red-600 {
   --tw-text-opacity: 1;
   color: rgb(220 38 38 / var(--tw-text-opacity))
-}
-
-.opacity-50 {
-  opacity: 0.5
 }
 
 .opacity-70 {
