--- a/frontend/tailwind.css
+++ b/frontend/tailwind.css
@@ -236,9 +236,14 @@
   line-height: 1.5rem
 }
 
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem
 }
 
 .text-4xl {
@@ -246,19 +251,14 @@
   line-height: 2.5rem
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem
-}
-
 .text-gray-800 {
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity))
 }
 
-.text-slate-500 {
+.text-slate-800 {
   --tw-text-opacity: 1;
-  color: rgb(100 116 139 / var(--tw-text-opacity))
+  color: rgb(30 41 59 / var(--tw-text-opacity))
 }
 
 .text-white {
