--- a/frontend/tailwind.css
+++ b/frontend/tailwind.css
@@ -50,6 +50,10 @@
   margin-bottom: 0.75rem
 }
 
+.mr-4 {
+  margin-right: 1rem
+}
+
 .flex {
   display: flex
 }
@@ -96,6 +100,10 @@
 
 .flex-row {
   flex-direction: row
+}
+
+.flex-col {
+  flex-direction: column
 }
 
 .flex-wrap {
@@ -194,6 +202,11 @@
   background-color: rgb(194 65 12 / var(--tw-bg-opacity))
 }
 
+.bg-blue-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity))
+}
+
 .p-4 {
   padding: 1rem
 }
@@ -217,8 +230,17 @@
   padding-bottom: 0.25rem
 }
 
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem
+}
+
 .pb-2 {
   padding-bottom: 0.5rem
+}
+
+.pt-8 {
+  padding-top: 2rem
 }
 
 .text-center {
@@ -253,6 +275,10 @@
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem
+}
+
+.font-bold {
+  font-weight: 700
 }
 
 .text-slate-800 {
